--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
     defaultConfig {
         applicationId "at.sober.swdev.inventoryapp"
         minSdkVersion 30
-        targetSdkVersion 30
+        targetSdkVersion 33//30
         versionCode 1
         versionName "1.0"
 
